--- a/index.html
+++ b/index.html
@@ -4,25 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utility Tools</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.5/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 text-gray-800">
-    <div class="container mx-auto p-6">
-        <h1 class="text-3xl font-bold mb-6">Utility Tools</h1>
-        <div class="grid gap-4 sm:grid-cols-2">
-            <a href="rate-conversion.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Generic Currency Converter</a>
-            <a href="data formatter v2.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Data Formatter</a>
-            <a href="v3/objectParser.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Data Formatter v3</a>
-            <a href="json-beautify.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">JSON Beautifier</a>
-            <a href="generateReportCSV.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">JSON to CSV Converter</a>
-            <a href="log-formatter.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Log Formatter</a>
-            <a href="log-formatter-v2.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Log Formatter v2</a>
-            <a href="timeout-simulator.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Timeout Simulator</a>
-            <a href="stock-dr-convertion.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">DR Price Calculator</a>
-            <a href="aes-256-gcm.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">AES-256-GCM Demo</a>
-            <a href="line-liff-poc.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">Line LIFF POC</a>
-            <a href="line-lift-poc-2.html" class="block p-4 bg-white rounded shadow hover:bg-gray-50">LIFF App Demo</a>
+<body>
+<div class="container py-5">
+    <h1 class="mb-4">Utility Tools</h1>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+            <a href="rate-conversion.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-currency-exchange display-5"></i>
+                    <h5 class="mt-2">Generic Currency Converter</h5>
+                    <p class="small mb-0">Convert currencies using current rates.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="data formatter v2.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-file-earmark-code display-5"></i>
+                    <h5 class="mt-2">Data Formatter</h5>
+                    <p class="small mb-0">Format JSON or XML for readability.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="v3/objectParser.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-file-earmark-code display-5"></i>
+                    <h5 class="mt-2">Data Formatter v3</h5>
+                    <p class="small mb-0">Advanced formatting with length info.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="json-beautify.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-braces display-5"></i>
+                    <h5 class="mt-2">JSON Beautifier</h5>
+                    <p class="small mb-0">Pretty-print and explore JSON data.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="generateReportCSV.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-filetype-csv display-5"></i>
+                    <h5 class="mt-2">JSON to CSV Converter</h5>
+                    <p class="small mb-0">Download CSV from JSON lists.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="log-formatter.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-table display-5"></i>
+                    <h5 class="mt-2">Log Formatter</h5>
+                    <p class="small mb-0">View JSON logs as HTML tables.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="log-formatter-v2.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-table display-5"></i>
+                    <h5 class="mt-2">Log Formatter v2</h5>
+                    <p class="small mb-0">Enhanced log viewer with extras.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="timeout-simulator.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-hourglass-split display-5"></i>
+                    <h5 class="mt-2">Timeout Simulator</h5>
+                    <p class="small mb-0">Experiment with delayed HTTP replies.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="stock-dr-convertion.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-calculator display-5"></i>
+                    <h5 class="mt-2">DR Price Calculator</h5>
+                    <p class="small mb-0">Compute DR prices from stock values.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="aes-256-gcm.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-shield-lock display-5"></i>
+                    <h5 class="mt-2">AES-256-GCM Demo</h5>
+                    <p class="small mb-0">Encrypt and decrypt data samples.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="line-liff-poc.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-chat-left-text display-5"></i>
+                    <h5 class="mt-2">Line LIFF POC</h5>
+                    <p class="small mb-0">Test basic LIFF features.</p>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="line-lift-poc-2.html" class="card h-100 text-decoration-none">
+                <div class="card-body text-center">
+                    <i class="bi bi-phone display-5"></i>
+                    <h5 class="mt-2">LIFF App Demo</h5>
+                    <p class="small mb-0">Simple mobile LIFF application.</p>
+                </div>
+            </a>
         </div>
     </div>
+</div>
 </body>
 </html>
