--- a/index.html
+++ b/index.html
@@ -1,126 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utility Tools</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .tool-card {
+            border: 1px solid #e9ecef;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            background-color: #ffffff;
+        }
+
+        .tool-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+        }
+
+        .tool-card .card-body {
+            color: #212529; /* Ensure text is readable */
+        }
+        
+        .tool-card i {
+            color: #0d6efd; /* Use primary color for icons */
+        }
+
+        /* Style for the search input */
+        .search-input {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
+
 <div class="container py-5">
-    <h1 class="mb-4">Utility Tools</h1>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-            <a href="rate-conversion.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-currency-exchange display-5"></i>
-                    <h5 class="mt-2">Generic Currency Converter</h5>
-                    <p class="small mb-0">Convert currencies using current rates.</p>
+    <div class="text-center mb-5">
+        <h1 class="display-5 fw-bold">Utility Tools</h1>
+        <p class="lead text-muted">A collection of handy developer utilities.</p>
+    </div>
+
+    <div class="mb-4">
+        <input type="text" id="toolSearch" class="form-control form-control-lg search-input" placeholder="Search for a tool...">
+    </div>
+
+    <div id="toolGrid" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
+        <div class="col tool-item">
+            <a href="rate-conversion.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-currency-exchange display-4"></i>
+                    <h5 class="card-title mt-3">Generic Currency Converter</h5>
+                    <p class="card-text small text-muted">Convert currencies using current rates.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="data formatter v2.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-file-earmark-code display-5"></i>
-                    <h5 class="mt-2">Data Formatter</h5>
-                    <p class="small mb-0">Format JSON or XML for readability.</p>
+        <div class="col tool-item">
+            <a href="data formatter v2.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-file-earmark-code display-4"></i>
+                    <h5 class="card-title mt-3">Data Formatter</h5>
+                    <p class="card-text small text-muted">Format JSON or XML for readability.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="v3/objectParser.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-file-earmark-code display-5"></i>
-                    <h5 class="mt-2">Data Formatter v3</h5>
-                    <p class="small mb-0">Advanced formatting with length info.</p>
+        <div class="col tool-item">
+            <a href="v3/objectParser.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-file-earmark-code display-4"></i>
+                    <h5 class="card-title mt-3">Data Formatter v3</h5>
+                    <p class="card-text small text-muted">Advanced formatting with length info.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="json-beautify.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-braces display-5"></i>
-                    <h5 class="mt-2">JSON Beautifier</h5>
-                    <p class="small mb-0">Pretty-print and explore JSON data.</p>
+        <div class="col tool-item">
+            <a href="json-beautify.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-braces display-4"></i>
+                    <h5 class="card-title mt-3">JSON Beautifier</h5>
+                    <p class="card-text small text-muted">Pretty-print and explore JSON data.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="generateReportCSV.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-filetype-csv display-5"></i>
-                    <h5 class="mt-2">JSON to CSV Converter</h5>
-                    <p class="small mb-0">Download CSV from JSON lists.</p>
+        <div class="col tool-item">
+            <a href="generateReportCSV.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-filetype-csv display-4"></i>
+                    <h5 class="card-title mt-3">JSON to CSV Converter</h5>
+                    <p class="card-text small text-muted">Download CSV from JSON lists.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="log-formatter.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-table display-5"></i>
-                    <h5 class="mt-2">Log Formatter</h5>
-                    <p class="small mb-0">View JSON logs as HTML tables.</p>
+        <div class="col tool-item">
+            <a href="log-formatter.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-table display-4"></i>
+                    <h5 class="card-title mt-3">Log Formatter</h5>
+                    <p class="card-text small text-muted">View JSON logs as HTML tables.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="log-formatter-v2.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-table display-5"></i>
-                    <h5 class="mt-2">Log Formatter v2</h5>
-                    <p class="small mb-0">Enhanced log viewer with extras.</p>
+        <div class="col tool-item">
+            <a href="log-formatter-v2.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-table display-4"></i>
+                    <h5 class="card-title mt-3">Log Formatter v2</h5>
+                    <p class="card-text small text-muted">Enhanced log viewer with extras.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="timeout-simulator.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-hourglass-split display-5"></i>
-                    <h5 class="mt-2">Timeout Simulator</h5>
-                    <p class="small mb-0">Experiment with delayed HTTP replies.</p>
+        <div class="col tool-item">
+            <a href="timeout-simulator.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-hourglass-split display-4"></i>
+                    <h5 class="card-title mt-3">Timeout Simulator</h5>
+                    <p class="card-text small text-muted">Experiment with delayed HTTP replies.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="stock-dr-convertion.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-calculator display-5"></i>
-                    <h5 class="mt-2">DR Price Calculator</h5>
-                    <p class="small mb-0">Compute DR prices from stock values.</p>
+        <div class="col tool-item">
+            <a href="stock-dr-convertion.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-calculator display-4"></i>
+                    <h5 class="card-title mt-3">DR Price Calculator</h5>
+                    <p class="card-text small text-muted">Compute DR prices from stock values.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="aes-256-gcm.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-shield-lock display-5"></i>
-                    <h5 class="mt-2">AES-256-GCM Demo</h5>
-                    <p class="small mb-0">Encrypt and decrypt data samples.</p>
+        <div class="col tool-item">
+            <a href="aes-256-gcm.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-shield-lock display-4"></i>
+                    <h5 class="card-title mt-3">AES-256-GCM Demo</h5>
+                    <p class="card-text small text-muted">Encrypt and decrypt data samples.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="line-liff-poc.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-chat-left-text display-5"></i>
-                    <h5 class="mt-2">Line LIFF POC</h5>
-                    <p class="small mb-0">Test basic LIFF features.</p>
+        <div class="col tool-item">
+            <a href="line-liff-poc.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-chat-left-text display-4"></i>
+                    <h5 class="card-title mt-3">Line LIFF POC</h5>
+                    <p class="card-text small text-muted">Test basic LIFF features.</p>
                 </div>
             </a>
         </div>
-        <div class="col">
-            <a href="line-lift-poc-2.html" class="card h-100 text-decoration-none">
-                <div class="card-body text-center">
-                    <i class="bi bi-phone display-5"></i>
-                    <h5 class="mt-2">LIFF App Demo</h5>
-                    <p class="small mb-0">Simple mobile LIFF application.</p>
+        <div class="col tool-item">
+            <a href="line-lift-poc-2.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-phone display-4"></i>
+                    <h5 class="card-title mt-3">LIFF App Demo</h5>
+                    <p class="card-text small text-muted">Simple mobile LIFF application.</p>
                 </div>
             </a>
         </div>
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const searchInput = document.getElementById('toolSearch');
+        const toolItems = document.querySelectorAll('#toolGrid .tool-item');
+
+        searchInput.addEventListener('keyup', function(event) {
+            const query = event.target.value.toLowerCase();
+
+            toolItems.forEach(item => {
+                const title = item.querySelector('.card-title').textContent.toLowerCase();
+                const description = item.querySelector('.card-text').textContent.toLowerCase();
+
+                if (title.includes(query) || description.includes(query)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+        });
+    });
+</script>
+
 </body>
 </html>
