--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
                 </div>
             </a>
         </div>
+        <div class="col tool-item">
+            <a href="Dynatrace JSON Log Viewer with Summary View.html" class="card h-100 text-decoration-none tool-card">
+                <div class="card-body text-center p-4">
+                    <i class="bi bi-clipboard-data display-4"></i>
+                    <h5 class="card-title mt-3">Dynatrace Log Viewer</h5>
+                    <p class="card-text small text-muted">Analyze Dynatrace logs with summary view.</p>
+                </div>
+            </a>
+        </div>
         </div>
     </div>
 </div>
