--- a/stock-dr-convertion.html
+++ b/stock-dr-convertion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
             align-items: center;
             min-height: 100vh;
         }
+
         .container {
             width: 100%;
             max-width: 500px;
@@ -26,6 +28,7 @@
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
+
         h2 {
             text-align: center;
             color: #1a237e;
@@ -33,16 +36,21 @@
             margin-bottom: 1.5rem;
             font-weight: 600;
         }
+
         .form-group {
             margin-bottom: 1rem;
         }
+
         label {
             display: block;
             margin-bottom: 0.5rem;
             color: #333;
             font-weight: 500;
         }
-        input, select, button {
+
+        input,
+        select,
+        button {
             width: 100%;
             padding: 12px;
             border: 1px solid #ccc;
@@ -51,11 +59,14 @@
             font-family: 'Kanit', sans-serif;
             font-size: 1rem;
         }
-        input:focus, select:focus {
+
+        input:focus,
+        select:focus {
             outline: none;
             border-color: #007BFF;
             box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
         }
+
         button {
             background-color: #007BFF;
             color: #fff;
@@ -65,203 +76,195 @@
             transition: background-color 0.3s;
             margin-top: 1rem;
         }
+
         button:hover {
             background-color: #0056b3;
         }
+
         .output {
             margin-top: 1.5rem;
             padding: 1.5rem;
             border-radius: 8px;
             text-align: center;
-            display: none; /* Hidden by default */
+            display: none;
+            /* Hidden by default */
         }
+
         .output h3 {
             margin-top: 0;
             font-weight: 600;
         }
+
         .output p {
             margin: 0.5rem 0;
             font-size: 1.1rem;
         }
+
         #expectedDrPrice {
             font-size: 2rem;
             font-weight: 600;
             color: #1a237e;
         }
+
         .difference-premium {
-            color: #c62828; /* Red for Premium */
+            color: #c62828;
+            /* Red for Premium */
             font-weight: 500;
         }
+
         .difference-discount {
-            color: #2e7d32; /* Green for Discount */
+            color: #2e7d32;
+            /* Green for Discount */
             font-weight: 500;
         }
+
         .loader {
             font-size: 0.8rem;
             color: #666;
         }
     </style>
 </head>
+
 <body>
 
-<div class="container">
-    <h2>เครื่องคำนวณราคา DR</h2>
-    <form id="drCalculator">
+    <div class="container">
+        <h2>เครื่องคำนวณราคา DR</h2>
+        <form id="drCalculator">
 
-        <div class="form-group">
-            <label for="drList">เลือก DR (Select DR)</label>
-            <select id="drList" onchange="updateDrInfo()">
-                <option value="">-- กรุณาเลือก DR --</option>
-            </select>
-        </div>
+            <div class="form-group">
+                <label for="drList">เลือก DR (Select DR)</label>
+                <select id="drList" onchange="updateDrInfo()">
+                    <option value="">-- กรุณาเลือก DR --</option>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="stockPrice">ราคาหุ้นอ้างอิง (Underlying Price in USD)</label>
-            <input type="number" id="stockPrice" placeholder="e.g., 175.50" step="0.01" required>
-        </div>
+            <div class="form-group">
+                <label for="stockPrice">ราคาหุ้นอ้างอิง (Underlying Price in USD)</label>
+                <input type="number" id="stockPrice" placeholder="e.g., 175.50" step="0.01" required>
+            </div>
 
-        <div class="form-group">
-            <label for="exchangeRate">อัตราแลกเปลี่ยน (Exchange Rate USD/THB)</label>
-            <input type="number" id="exchangeRate" placeholder="Loading rate..." step="0.001" required>
-            <small class="loader" id="rateLoader">กำลังดึงข้อมูลอัตราแลกเปลี่ยน...</small>
-        </div>
+            <div class="form-group">
+                <label for="exchangeRate">อัตราแลกเปลี่ยน (Exchange Rate USD/THB)</label>
+                <input type="number" id="exchangeRate" placeholder="Loading rate..." step="0.001" required>
+                <small class="loader" id="rateLoader">กำลังดึงข้อมูลอัตราแลกเปลี่ยน...</small>
+            </div>
 
-        <div class="form-group">
-            <label for="drRatio">อัตราส่วน (1 : X)</label>
-            <input type="number" id="drRatio" placeholder="e.g., 2000" required>
-        </div>
+            <div class="form-group">
+                <label for="drRatio">อัตราส่วน (1 : X)</label>
+                <input type="number" id="drRatio" placeholder="e.g., 2000" required>
+            </div>
 
-        <div class="form-group">
-            <label for="currentDrPrice">ราคา DR ปัจจุบัน (Current DR Price - Optional)</label>
-            <input type="number" id="currentDrPrice" placeholder="e.g., 3.12" step="0.01">
-        </div>
+            <div class="form-group">
+                <label for="currentDrPrice">ราคา DR ปัจจุบัน (Current DR Price - Optional)</label>
+                <input type="number" id="currentDrPrice" placeholder="e.g., 3.12" step="0.01">
+            </div>
 
-        <button type="button" onclick="calculateDRPrice()">คำนวณ (Calculate)</button>
-    </form>
+            <button type="button" onclick="calculateDRPrice()">คำนวณ (Calculate)</button>
+        </form>
 
-    <div class="output" id="output">
-        <h3>ราคา DR ที่ควรจะเป็น (Expected DR Price)</h3>
-        <p><span id="expectedDrPrice"></span> THB</p>
-        <div id="differenceOutput" style="display: none;">
-            <p><strong>ส่วนต่าง (Difference):</strong> <span id="difference"></span>%</p>
-            <p id="differenceDescription"></p>
+        <div class="output" id="output">
+            <h3>ราคา DR ที่ควรจะเป็น (Expected DR Price)</h3>
+            <p><span id="expectedDrPrice"></span> THB</p>
+            <div id="differenceOutput" style="display: none;">
+                <p><strong>ส่วนต่าง (Difference):</strong> <span id="difference"></span>%</p>
+                <p id="differenceDescription"></p>
+            </div>
         </div>
     </div>
-</div>
 
-<script>
-    // --- DATA SOURCE ---
-    const drData = {
-        "AAPL80": { ratio: 2000.0000, name: "APPLE INC" },
-        "ADDYY24": { ratio: 1.0000, name: "ADIDAS AG" },
-        "AMD80": { ratio: 200.0000, name: "ADVANCED MICRO DEVICES" },
-        "BABA80": { ratio: 1.0000, name: "ALIBABA GROUP HOLDING" },
-        "BILI80": { ratio: 1.0000, name: "BILIBILI INC." },
-        "BYDCOM80": { ratio: 5.0000, name: "BYD COMPANY LIMITED" },
-        "GOOG80": { ratio: 2000.0000, name: "ALPHABET INC-CL A" },
-        "HKCE01": { ratio: 1.0000, name: "HANG SENG CHINA ENTERPRISE" },
-        "HSTECH01": { ratio: 1.0000, name: "HANG SENG TECH INDEX" },
-        "JPM80X": { ratio: 40.0000, name: "JPMORGAN CHASE & CO" },
-        "LVMH01": { ratio: 20.0000, name: "LVMH" },
-        "MSFT80": { ratio: 100.0000, name: "MICROSOFT CORP" },
-        "NDX01": { ratio: 100.0000, name: "NASDAQ 100 INDEX" },
-        "NETEASE80": { ratio: 1.0000, name: "NETEASE, INC." },
-        "NINTENDO80": { ratio: 5.0000, name: "NINTENDO CO LTD" },
-        "NIO80": { ratio: 1.0000, name: "NIO INC." },
-        "NVDA80": { ratio: 100.0000, name: "NVIDIA CORPORATION" },
-        "PINGAN80": { ratio: 1.0000, name: "PING AN INSURANCE" },
-        "SBUX80": { ratio: 100.0000, name: "STARBUCKS CORP" },
-        "TCE01": { ratio: 1.0000, name: "TENCENT" },
-        "TSLA80": { ratio: 100.0000, name: "TESLA, INC." },
-        "VFS80X": { ratio: 1.0000, name: "VINFAST AUTO LTD." },
-        "VNM80X": { ratio: 2.0000, name: "VIETNAM DAIRY" },
-        "XIAOMI80": { ratio: 1.0000, name: "XIAOMI CORPORATION-WR" },
-        "XPENG80": { ratio: 1.0000, name: "XPENG INC." },
-    };
+    <script>
+        const drData = {
+            "QQQM19": { ratio: 500.0000, name: "NASDAQ 100" },
+            "AMD80": { ratio: 5000.0000, name: "AMD" },
+            "MSFT80": { ratio: 2000.0000, name: "microsoft" },
+            "GOOG80": { ratio: 2000.0000, name: "ALPHABET" },
+            "TENCENT80": { ratio: 100.0000, name: "TENCENT" }
+        };
 
-    // --- PAGE INITIALIZATION ---
-    document.addEventListener("DOMContentLoaded", () => {
-        populateDrList();
-        fetchExchangeRate();
-    });
+        // --- PAGE INITIALIZATION ---
+        document.addEventListener("DOMContentLoaded", () => {
+            populateDrList();
+            fetchExchangeRate();
+        });
 
-    function populateDrList() {
-        const drListSelect = document.getElementById("drList");
-        for (const symbol in drData) {
-            const option = document.createElement("option");
-            option.value = symbol;
-            option.textContent = `${symbol} (${drData[symbol].name})`;
-            drListSelect.appendChild(option);
-        }
-    }
-
-    function updateDrInfo() {
-        const selectedSymbol = document.getElementById("drList").value;
-        if (selectedSymbol && drData[selectedSymbol]) {
-            document.getElementById("drRatio").value = drData[selectedSymbol].ratio;
-        } else {
-            document.getElementById("drRatio").value = "";
-        }
-    }
-
-    async function fetchExchangeRate() {
-        const exchangeRateInput = document.getElementById("exchangeRate");
-        const loader = document.getElementById("rateLoader");
-        try {
-            const response = await fetch('https://open.er-api.com/v6/latest/USD');
-            if (!response.ok) throw new Error('Network response was not ok');
-            const data = await response.json();
-            const rate = data.rates.THB;
-            if (rate) {
-                exchangeRateInput.value = rate.toFixed(3);
-                loader.textContent = `อัปเดตล่าสุด: ${new Date().toLocaleTimeString()}`;
-            } else {
-                loader.textContent = "ไม่สามารถดึงข้อมูลได้";
+        function populateDrList() {
+            const drListSelect = document.getElementById("drList");
+            for (const symbol in drData) {
+                const option = document.createElement("option");
+                option.value = symbol;
+                option.textContent = `${symbol} (${drData[symbol].name})`;
+                drListSelect.appendChild(option);
             }
-        } catch (error) {
-            console.error("Failed to fetch exchange rate:", error);
-            loader.textContent = "ผิดพลาด! กรุณากรอกด้วยตนเอง";
-            exchangeRateInput.placeholder = "e.g., 36.750";
-        }
-    }
-
-    // --- CALCULATION LOGIC ---
-    function calculateDRPrice() {
-        const stockPrice = parseFloat(document.getElementById("stockPrice").value);
-        const exchangeRate = parseFloat(document.getElementById("exchangeRate").value);
-        const drRatio = parseFloat(document.getElementById("drRatio").value);
-        const currentDrPrice = parseFloat(document.getElementById("currentDrPrice").value);
-
-        if (isNaN(stockPrice) || isNaN(exchangeRate) || isNaN(drRatio) || drRatio <= 0) {
-            alert("กรุณากรอกข้อมูลที่จำเป็นให้ครบถ้วน (ราคาหุ้น, อัตราแลกเปลี่ยน, และอัตราส่วน)");
-            return;
         }
 
-        const expectedDrPrice = (stockPrice * exchangeRate) / drRatio;
-        document.getElementById("expectedDrPrice").textContent = expectedDrPrice.toFixed(3);
-
-        const outputDiv = document.getElementById("output");
-        outputDiv.style.display = "block";
-
-        const differenceOutputDiv = document.getElementById("differenceOutput");
-        const differenceSpan = document.getElementById("difference");
-        const descriptionSpan = document.getElementById("differenceDescription");
-
-        if (!isNaN(currentDrPrice) && currentDrPrice > 0) {
-            const difference = ((currentDrPrice - expectedDrPrice) / expectedDrPrice) * 100;
-            differenceSpan.textContent = difference.toFixed(2);
-
-            if (difference > 0) {
-                descriptionSpan.innerHTML = `ราคา DR ปัจจุบัน <strong class="difference-premium">สูงกว่าที่ควรจะเป็น (Premium)</strong>`;
+        function updateDrInfo() {
+            const selectedSymbol = document.getElementById("drList").value;
+            if (selectedSymbol && drData[selectedSymbol]) {
+                document.getElementById("drRatio").value = drData[selectedSymbol].ratio;
             } else {
-                descriptionSpan.innerHTML = `ราคา DR ปัจจุบัน <strong class="difference-discount">ต่ำกว่าที่ควรจะเป็น (Discount)</strong>`;
+                document.getElementById("drRatio").value = "";
             }
-            differenceOutputDiv.style.display = "block";
-        } else {
-            differenceOutputDiv.style.display = "none";
         }
-    }
-</script>
+
+        async function fetchExchangeRate() {
+            const exchangeRateInput = document.getElementById("exchangeRate");
+            const loader = document.getElementById("rateLoader");
+            try {
+                const response = await fetch('https://open.er-api.com/v6/latest/USD');
+                if (!response.ok) throw new Error('Network response was not ok');
+                const data = await response.json();
+                const rate = data.rates.THB;
+                if (rate) {
+                    exchangeRateInput.value = rate.toFixed(3);
+                    loader.textContent = `อัปเดตล่าสุด: ${new Date().toLocaleTimeString()}`;
+                } else {
+                    loader.textContent = "ไม่สามารถดึงข้อมูลได้";
+                }
+            } catch (error) {
+                console.error("Failed to fetch exchange rate:", error);
+                loader.textContent = "ผิดพลาด! กรุณากรอกด้วยตนเอง";
+                exchangeRateInput.placeholder = "e.g., 36.750";
+            }
+        }
+
+        // --- CALCULATION LOGIC ---
+        function calculateDRPrice() {
+            const stockPrice = parseFloat(document.getElementById("stockPrice").value);
+            const exchangeRate = parseFloat(document.getElementById("exchangeRate").value);
+            const drRatio = parseFloat(document.getElementById("drRatio").value);
+            const currentDrPrice = parseFloat(document.getElementById("currentDrPrice").value);
+
+            if (isNaN(stockPrice) || isNaN(exchangeRate) || isNaN(drRatio) || drRatio <= 0) {
+                alert("กรุณากรอกข้อมูลที่จำเป็นให้ครบถ้วน (ราคาหุ้น, อัตราแลกเปลี่ยน, และอัตราส่วน)");
+                return;
+            }
+
+            const expectedDrPrice = (stockPrice * exchangeRate) / drRatio;
+            document.getElementById("expectedDrPrice").textContent = expectedDrPrice.toFixed(3);
+
+            const outputDiv = document.getElementById("output");
+            outputDiv.style.display = "block";
+
+            const differenceOutputDiv = document.getElementById("differenceOutput");
+            const differenceSpan = document.getElementById("difference");
+            const descriptionSpan = document.getElementById("differenceDescription");
+
+            if (!isNaN(currentDrPrice) && currentDrPrice > 0) {
+                const difference = ((currentDrPrice - expectedDrPrice) / expectedDrPrice) * 100;
+                differenceSpan.textContent = difference.toFixed(2);
+
+                if (difference > 0) {
+                    descriptionSpan.innerHTML = `ราคา DR ปัจจุบัน <strong class="difference-premium">สูงกว่าที่ควรจะเป็น (Premium)</strong>`;
+                } else {
+                    descriptionSpan.innerHTML = `ราคา DR ปัจจุบัน <strong class="difference-discount">ต่ำกว่าที่ควรจะเป็น (Discount)</strong>`;
+                }
+                differenceOutputDiv.style.display = "block";
+            } else {
+                differenceOutputDiv.style.display = "none";
+            }
+        }
+    </script>
 
 </body>
+
 </html>
